src/bin/buildlog.txt
parsing
Got 5 errors while executing:
  (/home/darkstar/c64/vscode-64tass/vs64tass/src/extension.ts 3:10) Syntax error
  (/home/darkstar/c64/vscode-64tass/vs64tass/src/extension.ts 4:8) Syntax error
  (/home/darkstar/c64/vscode-64tass/vs64tass/src/extension.ts 5:8) Syntax error
  (/home/darkstar/c64/vscode-64tass/vs64tass/src/extension.ts 7:17) Syntax error
  (/home/darkstar/c64/vscode-64tass/vs64tass/src/extension.ts 29:17) Syntax error

// The module 'vscode' contains the VS Code extensibility API
// Import the module and reference it with the alias vscode in your code below
import * as vscode from 'vscode';
         ^

Error: Syntax error
at line 3, column 10 in extension.ts


